# PropSurfCoupling

CSAR_Dec2011/: BurningRate.csv  Flux_avg.csv  Makefile  allocation.f90  avg_space.f90  bc.f90  bc_data.f90  bcq.f90  binder_rate.f90  chem_info.txt  conductivity.f90  correlations.txt  data_str.f90  data_types.f90  driver.f90  explicit_residual.f90  flux.f90  fort.14  fort.3  gauss_relax.f90  get_mg_decomp.f90  get_proc_decomp.f90  ghost.f90  global_data.f90  globalparameter.f90  grid.f90  ic.f90  implicit_bc.f90  input.txt  lusolver.f90  mg_solver.f90  modify_gp.f90  mpi.f90  newroutines.f90  pack2.txt  parallel.h  paths.txt  pressure.f90  projection.f90  psi.f90  (+15 more)
CSAR_Feb2017/code_022117/src/: globalparameter.f90  grid.f90  implicit_bc.f90  pressure.f90  pyrolysis.f90  quadrants.f90  read_matrix.f90  read_pack.f90  restart.f90  txy_2_1.f90  wgauss_relax.f90
CSAR_Feb2017/code_022117_COPY/src/: Makefile  conductivity.f90  get_mg_decomp.f90  ghost.f90  rate.f90  solid_prop.f90  viz1.f90  viz2.f90
CSAR_Feb2017/rocpack-0.1.5/: INSTALL  Makefile.am  README  TODO  config.h.in  configure  configure.ac
CSAR_Feb2017/rocpack-0.1.5/examples/: boundary-types  crystals  cylinders  disks  polydisperse  readbin.f90  simple  speed-test  visual
CSAR_Feb2017/rocpack-0.1.5/scripts/: obj2shape  pack2rdf  shapegen
CSAR_Feb2017/rocpack-0.1.5/shapes/: antiprism6  dodecahedron  ellipsoids20x20  prism3  prism5  pyramid5  pyramid6  reflected_snub_dodecahedron  rhombicosidodecahedron  rhombicuboctahedron  snub_cube  snub_dodecahedron  square_rod  truncated_cuboctahedron  truncated_icosahedron  truncated_icosidodecahedron
CSAR_Feb2017/rocpack-0.1.5/src/: collision.h  cylinder.cc  cylinder.h  debug.h  ellipsoid.h  event.h  opengl.h  pack2bin.cc  pack2mesh.cc  parse.cc  parse.h  particle.cc  polyhedron.h  quaternion.h  queue.cc  rdf.cc  settings.h  shape.h  simplex.h  sphere.cc  sphere.h  stime.h  token.h  vmath.h
CSAR_Feb2017/rocprepack_code/: convert.f  rocprepack_2a.f  rocprepack_2a_olderversion.f  rocprepack_2b.f  rocprepack_3.h
CSAR_Feb2017/rocprepack_code/Formulations_data/: Annulus_01  Borne01  CMDB01  Cylinder_02  Cylinder_03  Cylinder_04  Eglin01  Eglin03  Example_03  Example_07  Example_09  Example_10  Example_11  Example_12  Example_13  Example_16a  Example_18  Galfett1_p01a  Hyunsun_01  McGeary_02  Miller_blend_02  Miller_blend_03  Miller_blend_03_Miller  Miller_blend_06  Miller_blend_09  Miller_blend_10  Miller_blend_12  Miller_blend_14  Miller_blend_16  Miller_blend_17  Miller_blend_21_Miller  Miller_blend_24  Miller_blend_24_Thiokol  Miller_blend_26  Miller_blend_31  Miller_blend_32  PBX9501  Price_bimodal_390_196.0  SME_8061  SME_904118  (+8 more)
CSAR_Feb2017/rocstat/: AUTHORS  INSTALL  help.c  hotspot.c  random.h  rocplot  slice.c  stat.c
RocCodes/.metadata/: version.ini
RocCodes/code_022117/src/: allocation.f90  bcq.f90  data_types.f90  explicit_residual.f90  ic.f90  implicit.txt  listfiles.txt  mg_solver.f90  radiation.f90  statistics.f90  velocity.f90
RocCodes/code_022117_COPY/src/: bc_data.f90  bcnew.f90  data_str.f90  driver.f90  flux.f90  get_proc_decomp.f90  global_data.f90  lusolver.f90  mpi.f90  newroutines.f90  projection.f90  qxy_2_1.f90  test.f90  update_phi.f90  update_psinew.f90
RocCodes/rocpack-0.1.5/: AUTHORS  Makefile.in  NEWS  aclocal.m4
RocCodes/rocpack-0.1.5/examples/: ap-propellant  ellipsoids  icosahedra  new-shape
RocCodes/rocpack-0.1.5/scripts/: off2shape
RocCodes/rocpack-0.1.5/shapes/: adn  antiprism4  antiprism5  cube  cuboctahedron  hmx  icosahedron  icosidodecahedron  octahedron  petn  prism6  pyramid4  reflected_snub_cube  rounded_cube  snub_prism3  tetrahedron  truncated_cube  truncated_dodecahedron  truncated_octahedron  truncated_tetrahedron
RocCodes/rocpack-0.1.5/src/: boundary.cc  boundary.h  collision.cc  convex.h  ellipsoid.cc  event.cc  gjk.cc  gjk.h  hgrid.cc  hgrid.h  main.cc  matrix.h  opengl.cc  packing.cc  packing.h  particle.h  point.h  polyhedron.cc  queue.h  random.h  scalar.h  settings.cc  shape.cc  simplex.cc  stack.h  state.h  timer.h  token.cc  transform.h  vector.h
RocCodes/rocprepack_code/: filenames.list  make_rocprepack  rocprepack_1.f  rocprepack_2c.f  slices.f  slices.m
RocCodes/rocprepack_code/Formulations_data/: Annulus_02  AtlasV  Borne02  Cylinder_01  Eglin02  Example_01  Example_02  Example_04  Example_05  Example_08  Example_14  Example_15  Example_16  GlassBeads_01  McGeary_01  McGeary_03  McGeary_04  Miller_blend_04  Miller_blend_05  Miller_blend_08  Miller_blend_15  Miller_blend_17_Miller  Miller_blend_18  Miller_blend_19  Miller_blend_19_Thiokol  Miller_blend_20  Miller_blend_21  Miller_blend_22  Miller_blend_23  Miller_blend_23_Thiokol  Miller_blend_24_Miller  Miller_blend_25  (+21 more)
RocCodes/rocstat/: ChangeLog  Makefile  README  amira.c  amira.h  random.c  rocstat.c  view.c
antioch_mod/: .cproject  .project
antioch_mod/Debug/: makefile  objects.mk  sources.mk
antioch_mod/Release/: antioch_mod  makefile  objects.mk
antioch_mod/share/: Makefile  Makefile.in
antioch_mod/src/: antioch_mod.cpp
antioch_mod/test/: Makefile  Makefile.in  Stockmayer_unit  arrhenius_rate_deriv  arrhenius_rate_multideriv  ascii_parser_unit  ascii_parser_unit.sh  berthelot_rate_unit  berthelot_rate_vec_unit  berthelothercourtessen_rate_unit  berthelothercourtessen_rate_vec_unit  blottner_viscosity_unit  blottner_viscosity_vec_unit  cea_evaluator_vec_unit  chem_mixture_unit  chem_mixture_vec_unit  constant_lewis_unit  constant_rate_unit  constant_rate_vec_unit  duplicate_process_unit  eigen_unit_tests  elementary_process_unit  eucken_thermal_cond_unit  fail_parsing_xml_1.sh  fail_parsing_xml_2.sh  gsl_unit_tests  hercourtessen_rate_unit  hercourtessen_rate_vec_unit  ideal_gas_micro_thermo_unit  kinetics_partial_order_unit  kinetics_partial_order_unit.sh  kinetics_reactive_scheme_unit  kinetics_reactive_scheme_unit.sh  kinetics_regression  kinetics_regression_air_5sp.sh  kinetics_regression_vec  kinetics_regression_vec_air_5sp.sh  kinetics_reversibility_unit  kinetics_settings_unit  kinetics_theory_thermal_conductivity_unit  (+44 more)
(+783 files in other folders)
